--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="card-body text-center">
             <h5 class="card-title text-white">Ejercicio 2</h5>
             <p class="card-text text-justify text-white">Programa de calculo se suma, resta, Multiplicación, division y modulo.</p>
-            <button href="#" class="btn btn-danger">Iniciar</button>
+            <button onclick="ejerc2()" class="btn btn-danger">Iniciar</button>
           </div>
         </div>
 
@@ -38,7 +38,7 @@
               <h5 class="card-title text-white">Ejercicio 3</h5>
               <p class="card-text text-justify text-white">programa que pida al usuario ingresar la temperatura en grados Celsius y
                 que la transforme a grados Kelvin y Fahrenheit</p>
-              <button href="#" class="btn btn-danger">Iniciar</button>
+              <button onclick="ejerc3()"  class="btn btn-danger">Iniciar</button>
             </div>
           </div>
 
@@ -57,13 +57,22 @@
               <button href="#" class="btn btn-danger">Iniciar</button>
             </div>
           </div>
-
-       
       </div>
-
     </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+      
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
