--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
               <h5 class="card-title text-white">Ejercicio 4</h5>
               <p class="card-text text-justify text-white">Programa que pide al usuario una cantidad de días y que muestre su
                   equivalente en Años, Semanas y Días.</p>
-              <button href="#" class="btn btn-danger">Iniciar</button>
+              <button onclick="ejerc4()" class="btn btn-danger">Iniciar</button>
             </div>
           </div>
           <div class="card bg-info mb-3" style="max-width: 18rem;">
             <div class="card-body text-center">
               <h5 class="card-title text-white">Ejercicio 5</h5>
               <p class="card-text text-justify text-white">Programa que solicite al usuario 5 números para realizar la suma de todos los números y el promedio de estos numeros</p>
-              <button href="#" class="btn btn-danger">Iniciar</button>
+              <button onclick="ejerc5()" class="btn btn-danger">Iniciar</button>
             </div>
           </div>
       </div>
