--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="card-tex text-justify text-whitet">Diagrama de flujo para las siguientes operaciones matemáticas: Suma,
                 Resta, División, Multiplicación y el módulo de un número, partiendo de dos números
                 ingresados por el usuario.</p>
-                <a href="#" class="btn btn-warning">Ir</a>
+                <a href="https://lucid.app/documents/view/6f955a5f-4ac4-45de-83fc-2bfc0cb6e0f3" class="btn btn-warning">Ir</a>
           </div>
         </div>
         <div class="card bg-info mb-3" style="max-width: 18rem;">
